--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -1,1 +1,8 @@
 @import "~bootstrap/scss/bootstrap";
+
+.friend-markers{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  cursor: pointer;
+}
