--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -1,8 +1,10 @@
 @import "~bootstrap/scss/bootstrap";
 
-.friend-markers{
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  cursor: pointer;
-}
+// .friend-markers{
+//   background-image: url("/images/friend_dot.png");
+//   background-size: cover;
+//   width: 50px;
+//   height: 50px;
+//   border-radius: 50%;
+//   cursor: pointer;
+// }
