adds filter functionality

--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -8,3 +8,17 @@
 //   border-radius: 50%;
 //   cursor: pointer;
 // }
+
+#map-direction-card{
+  max-width: 8rem;
+  max-height: 8rem;
+  margin: left;
+
+  .card-body{
+    padding-top: 2px;
+    padding-right: 2px;
+    padding-bottom: 2px;
+    padding-left: 2px;
+  }
+
+}
