--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -1,6 +1,6 @@
-// @import "~bootstrap/scss/bootstrap";
+@import "~bootstrap/scss/bootstrap";
 
-@import "../../node_modules/bootstrap/scss/bootstrap";
+// @import "../../node_modules/bootstrap/scss/bootstrap";
 // .friend-markers{
 //   background-image: url("/images/friend_dot.png");
 //   background-size: cover;
@@ -37,7 +37,7 @@ $yeller: #ecc800;
   border: none;
 }
 
-.btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
+.btn-primary {
   background-color: $yeller !important;
 }
 
@@ -45,7 +45,41 @@ $yeller: #ecc800;
   background-color: $greeny !important;
 }
 
+// buttons to put icons inside for
+// friend management
 .btn-sm {
   border-radius: 15px;
-  padding: 3px 9px;
+  padding: 3px 6px;
+  font-size: x-small;
+  font-weight: bold;
+}
+
+.bottom-nav-button {
+  height: 40px;
+  width: 40px;
+  color: crimson;
+}
+
+.bottom-nav {
+  // width: 100vw;
+  // display: flex;
+  // flex-direction: row;
+  justify-content: space-evenly;
+  background-color: $pinky;
+  padding: 10px 0;
+  height: 8vh;
+}
+
+.top-nav {
+  // width: 100vw;
+  // display: flex;
+  // flex-direction: row;
+  justify-content: space-evenly;
+  background-color: $greeny;
+  padding: 10px 0;
+  height: 8vh;
+}
+
+.body {
+  padding: 8vh 0px;
 }
