--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -32,8 +32,28 @@ $isEMTStation:#f27d52;
 //   padding-bottom: 2px;
 // }
 
+// #map-filter-buttons {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   margin: 20px 20px, 20px, 10px;
+// }
+
+span {
+  font-size: medium;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin: 20px;
+}
+
 .btn {
   border: none;
+}
+
+.btn-group {
+  padding: 3px;
 }
 
 .btn-primary {
