--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -66,7 +66,6 @@ $yeller: #ecc800;
   // flex-direction: row;
   justify-content: space-evenly;
   background-color: $pinky;
-  padding: 10px 0;
   height: 8vh;
 }
 
@@ -76,10 +75,34 @@ $yeller: #ecc800;
   // flex-direction: row;
   justify-content: space-evenly;
   background-color: $greeny;
-  padding: 10px 0;
   height: 8vh;
 }
 
 .body {
-  padding: 8vh 0px;
+  // padding: 8vh 0px;
+  height: 84vh;
+  display: flex;
+  flex-direction: column;
 }
+
+
+// USER PAGE
+
+.event-modal {
+  min-height: 95vh;
+  background-color: #e7abff;
+}
+
+.userPage-tabs {
+  // border: 2px solid black;
+
+}
+
+h5 {
+text-align: center;
+color: $greeny;
+margin: 10px;
+text-transform: uppercase;
+font-weight: bold;
+}
+
