--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -48,6 +48,11 @@ span {
   margin: 20px;
 }
 
+// .map-page {
+//   // margin-top: 10px;
+//   padding-top: 25vh;
+// }
+
 .btn {
   border: none;
 }
@@ -100,5 +105,5 @@ span {
 }
 
 .body {
-  padding: 8vh 0px;
+  padding: 8vh 0px 0px 0px;
 }
