--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -10,6 +10,10 @@
 //   cursor: pointer;
 // }
 
+$greeny: #169874;
+$pinky: #e7abff;
+$yeller: #fcc54e;
+
 .card {
   padding: 10px;
   display: flex;
@@ -18,6 +22,7 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   margin-bottom: 10px;
   margin-top: 10px;
+  border: 2px solid #8d3dad;
 }
 
 #map-direction-card{
@@ -39,9 +44,7 @@
   padding-bottom: 2px;
 }
 
-$greeny: #169874;
-$pinky: #e7abff;
-$yeller: #ecc800;
+
 
 .btn {
   border: none;
@@ -57,6 +60,7 @@ $yeller: #ecc800;
 
 .btn-primary {
   background-color: $yeller !important;
+  color: black;
 }
 
 .btn-success {
@@ -91,7 +95,6 @@ $yeller: #ecc800;
   background-color: white;
   height: 12vh;
   border-top: black solid 2px;
-
 }
 
 .top-nav {
@@ -101,13 +104,17 @@ $yeller: #ecc800;
   justify-content: space-evenly;
   background-color: $greeny;
   height: 8vh;
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
 }
 
 .body {
-  margin-top: 10vh;
-  margin-bottom: 14vh;
+  padding-top: 10vh;
+  padding-bottom: 14vh;
   display: flex;
   flex-direction: column;
+  background-color: #f3d7fe;
 }
 
 
