CLIENT / refactor create event modal to tabs

--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -127,8 +127,10 @@ $yeller: #fcc54e;
 
 .userPage-tabs {
   // border: 2px solid black;
-
+  // background-color: white;
 }
+
+
 
 h5 {
 text-align: center;
