--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -25,26 +25,23 @@ $yeller: #fcc54e;
   border: 2px solid #8d3dad;
 }
 
-#map-direction-card{
+#map-direction-card {
   max-width: 8rem;
   max-height: 12rem;
   margin: left;
 
-  .card-body{
+  .card-body {
     padding-top: 2px;
     padding-right: 2px;
     padding-bottom: 2px;
     padding-left: 2px;
   }
-
 }
 
-.map-accordion-body{
+.map-accordion-body {
   padding-top: 2px;
   padding-bottom: 2px;
 }
-
-
 
 .btn {
   border: none;
@@ -115,8 +112,8 @@ $yeller: #fcc54e;
   display: flex;
   flex-direction: column;
   background-color: #f3d7fe;
+  min-height: 100vh;
 }
-
 
 // USER PAGE
 
@@ -127,14 +124,12 @@ $yeller: #fcc54e;
 
 .userPage-tabs {
   // border: 2px solid black;
-
 }
 
 h5 {
-text-align: center;
-color: $greeny;
-margin: 10px;
-text-transform: uppercase;
-font-weight: bold;
+  text-align: center;
+  color: $greeny;
+  margin: 10px;
+  text-transform: uppercase;
+  font-weight: bold;
 }
-
