--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -171,3 +171,18 @@ font-weight: bold;
   border-bottom: solid 1px $tabSelected;
 }
 
+//HOMEPAGE
+
+.body-home {
+  padding-top: 10vh;
+  padding-bottom: 25vh;
+  display: flex;
+  flex-direction: column;
+  background-color: $lightPinky;
+  min-height: 100vh;
+}
+
+.comment-btn {
+  border-radius: 17px;
+  padding: 3px 6px;
+}
