--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -72,7 +72,7 @@ $isEMTStation:#f27d52;
   border: 2px solid #BA37DD;
 }
 
-span {
+span { // keep this?
   font-size: medium;
   display: flex;
   align-items: center;
@@ -104,7 +104,7 @@ span {
   color: $dark;
 }
 
-.btn-success {
+.btn-success { // keep this
   background-color: $greeny !important;
   color: white
 }
