--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -61,7 +61,7 @@ $tabUnselectedBorder: #e3e3e3;
   border: 2px solid #BA37DD;
 }
 
-span { 
+span {
   font-size: medium;
   display: flex;
   align-items: center;
@@ -179,6 +179,22 @@ p {
 body{
   color: $dark;
   font-family: 'Fredoka', sans-serif;
+}
+.gig-body {
+  padding-top: 10vh;
+  padding-bottom: 14vh;
+  display: flex;
+  flex-direction: column;
+
+  background-color: $lightPinky;
+
+  min-height: 100vh;
+}
+.date-picker{
+  display: flex;
+  text-align: left;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 // purple border for tab
