comments out socket activity, adds mapPage styling, updates filter buttons, adds shareLoc toggle

--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -61,16 +61,16 @@ $tabUnselectedBorder: #e3e3e3;
   border: 2px solid #BA37DD;
 }
 
-span { 
-  font-size: medium;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  margin: 4px;
-  padding-bottom: 1rem;
-  color: $dark;
-}
+// span { 
+//   font-size: medium;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   text-align: center;
+//   margin: 4px;
+//   padding-bottom: 1rem;
+//   color: $dark;
+// }
 
 .btn {
   border: none;
