CLIENT / add themes

--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -344,3 +344,17 @@ body{
 .footer {
   text-align: center;
 }
+
+.pg-theme-light{
+  color: red;
+  text-transform: lowercase;
+}
+
+.pg-theme-vis {
+  text-transform: uppercase !important;
+  color: green;
+}
+
+.pg-theme-deep {
+font-family: 
+}
