CLIENT / add theme to classes for most components

--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -346,15 +346,13 @@ body{
 }
 
 .pg-theme-light{
-  color: red;
-  text-transform: lowercase;
 }
 
 .pg-theme-vis {
   text-transform: uppercase !important;
-  color: green;
+  color: green !important;
 }
 
 .pg-theme-deep {
-font-family: 
+font-family: serif !important;
 }
