--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -1,19 +1,16 @@
 @import "~bootstrap/scss/bootstrap";
-@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@100;200;400;500;700&family=Inter:wght@600;700&family=Shrikhand&family=Permanent+Marker&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@100;200;400;500;700&family=Inter:wght@600;700&family=Shrikhand&family=Permanent+Marker&display=swap");
 
-
-
-$isFree:#53CA3C;
+$isFree: #53ca3c;
 $isToilet: #169873;
-$isFood: #FCC54E;
-$isPersonal: #BA37DD;
+$isFood: #fcc54e;
+$isPersonal: #ba37dd;
 $isPhoneCharger: #53e3d4;
-$isPoliceStation: #E7ABFF;
-$isEMTStation:#f27d52;
-
+$isPoliceStation: #e7abff;
+$isEMTStation: #f27d52;
 
 $greeny: #169874;
-$lightGreeny: #53CA3C;
+$lightGreeny: #53ca3c;
 $darkGreeny: #015d43;
 $pinky: #e7abff;
 $dark: #211234;
@@ -33,8 +30,8 @@ $tabUnselected: $cardBackground;
 $tabUnselectedBorder: #e3e3e3;
 
 //colorblind friendly hues
-$tan: #D2B48C;
-$turq: #30D5C8;
+$tan: #d2b48c;
+$turq: #30d5c8;
 
 .card {
   padding: 10px;
@@ -49,16 +46,16 @@ $turq: #30D5C8;
   background-color: $cardBackground;
 }
 
-.card-body{
+.card-body {
   padding: 0px;
 }
 
-#map-direction-card{
+#map-direction-card {
   max-width: 7rem;
   max-height: 10rem;
   margin-left: 10px;
 
-  .card-body{
+  .card-body {
     padding-top: 1px;
     padding-right: 1px;
     padding-bottom: 1px;
@@ -93,7 +90,6 @@ $turq: #30D5C8;
   border: none;
 }
 
-
 .btn-wide {
   width: 80vw;
   max-width: 400px;
@@ -101,8 +97,8 @@ $turq: #30D5C8;
   border: $secondaryColor solid 2px;
 }
 
-
-.btn-success { // keep this
+.btn-success {
+  // keep this
   background-color: $yeller !important;
   color: white;
 }
@@ -161,29 +157,30 @@ $turq: #30D5C8;
 
 // USER PAGE
 
-#modal-header{
+#modal-header {
   background-color: $greeny;
 }
 
-#login{
+#login {
   background-color: $greeny;
   min-height: 100vh;
-  padding: 50px
+  padding: 50px;
 }
 
-#login-img{
-  display:block;
+#login-img {
+  display: block;
   margin: 0 auto;
   padding-bottom: 20px;
 }
 
 .modal-body {
-background-color: $primaryColor;}
+  background-color: $primaryColor;
+}
 
 .modal-title {
-  font-family: 'Permanent Marker', serif;
+  font-family: "Permanent Marker", serif;
 }
-#modal-footer{
+#modal-footer {
   background-color: $greeny;
 }
 
@@ -211,9 +208,9 @@ p {
   margin: 0px 6px 6px;
 }
 
-body{
+body {
   color: $dark;
-  font-family: 'Fredoka', sans-serif;
+  font-family: "Fredoka", sans-serif;
 }
 .gig-body {
   padding-top: 10vh;
@@ -225,7 +222,7 @@ body{
 
   min-height: 100vh;
 }
-.date-picker{
+.date-picker {
   display: flex;
   text-align: left;
   margin-left: auto;
@@ -234,7 +231,7 @@ body{
 
 // purple border for tab
 .nav-tabs {
-  border-bottom: 1px solid $tabSelectedBorder
+  border-bottom: 1px solid $tabSelectedBorder;
 }
 
 .nav-tabs .nav-item.show {
@@ -246,7 +243,7 @@ body{
   background-color: $tabSelected;
 }
 
-.userPage-tabs .tab-content .tab-pane{
+.userPage-tabs .tab-content .tab-pane {
   max-height: 55vh;
   overflow: scroll;
 }
@@ -258,18 +255,17 @@ body{
   justify-content: space-evenly;
 }
 
-.userPage-buttons-container .btn{
+.userPage-buttons-container .btn {
   margin: auto;
 }
 
-.userPage-buttons-container .dropup{
+.userPage-buttons-container .dropup {
   margin: auto;
-
 }
 
 .nav-tabs .nav-link {
   color: rgb(86, 86, 86);
-  font-family: 'Permanent Marker', serif;
+  font-family: "Permanent Marker", serif;
   background-color: $tabUnselected;
   border-top: 1px solid $tabUnselectedBorder;
   border-left: 1px solid $tabUnselectedBorder;
@@ -278,7 +274,7 @@ body{
 }
 
 .nav-tabs .nav-link.active {
-  font-family: 'Permanent Marker', serif;
+  font-family: "Permanent Marker", serif;
   background-color: $tabSelected;
   color: $dark;
   border-top: solid 1px $tabSelectedBorder;
@@ -331,13 +327,12 @@ body{
   margin: 3px auto;
 }
 
-
 .form-check-input:checked {
   background-color: $pinky;
   border-color: $ternaryColor;
 }
 
-.form-check.form-switch{
+.form-check.form-switch {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
@@ -345,18 +340,17 @@ body{
 }
 
 .form-check-input:focus {
-    border-color: #cc86fe;
-    outline: 0;
-    box-shadow: 0 0 0 0.25rem rgba(149, 13, 253, 0.25);
+  border-color: #cc86fe;
+  outline: 0;
+  box-shadow: 0 0 0 0.25rem rgba(149, 13, 253, 0.25);
 }
 
 .footer {
   text-align: center;
 }
 
-
 //regular mode
-.pg-theme-light{
+.pg-theme-light {
   .btn-primary {
     background-color: $yeller !important;
     color: $dark;
@@ -369,7 +363,7 @@ body{
     color: white;
     text-transform: uppercase;
   }
-  .btn-danger{
+  .btn-danger {
     background-color: black !important;
     text-transform: uppercase;
   }
@@ -384,5 +378,24 @@ body{
   .btn-primary {
     background-color: $pinky !important;
     color: $dark;
+    animation: funEffects 2s linear infinite, jiggle 0.3s ease-in-out infinite;
+    transform-origin: center;
+    z-index: 1;
+  }
+
+  @keyframes funEffects {
+    0%,
+    100% {
+      transform: translateY(0) rotate(0deg) translateX(0) scale(1);
+    }
+    25% {
+      transform: translateY(-5px) rotate(90deg) translateX(-5px) scale(1.1);
+    }
+    50% {
+      transform: translateY(0) rotate(180deg) translateX(0) scale(1);
+    }
+    75% {
+      transform: translateY(-5px) rotate(270deg) translateX(-5px) scale(1.1);
+    }
   }
 }
