top nav text responsive sizing

--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -144,7 +144,7 @@ $turq: #30D5C8;
   background-color: $greeny;
   height: 8vh;
   color: white;
-  font-size: 30px;
+  font-size: 1em;
   font-weight: 200;
 }
 
