--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -36,6 +36,10 @@ $tabUnselectedBorder: #e3e3e3;
 $tan: #D2B48C;
 $turq: #30D5C8;
 
+$offBlack: #291F1F;
+$cardBackground2: #fdf9f4;
+
+
 .card {
   padding: 10px;
   display: flex;
@@ -110,6 +114,11 @@ $turq: #30D5C8;
   font-weight: bold;
 }
 
+.userPage-tabs .btn-sm {
+  font-size:small !important;
+  padding: 3px 6px !important;
+}
+
 .bottom-nav-button {
   height: 50px;
   width: 50px;
@@ -142,9 +151,7 @@ $turq: #30D5C8;
   padding-bottom: 15vh;
   display: flex;
   flex-direction: column;
-
   background-color: $primaryColor;
-
   min-height: 100vh;
 }
 
@@ -367,31 +374,67 @@ body{
 //colorblind mode
 .pg-theme-vis {
   .btn-primary {
-    background-color: black !important;
+    background-color: $offBlack !important;
+    color: white;
+    text-transform: uppercase;
+  }
+
+  .btn-success {
+    background-color: $offBlack !important;
     color: white;
     text-transform: uppercase;
   }
 
   .btn-danger{
-    background-color: black !important;
+    background-color: $offBlack !important;
     color: white;
     text-transform: uppercase;
   }
 
   .dropdown-toggle{
-    background-color: black !important;
+    background-color: $offBlack !important;
     color: white;
     text-transform: uppercase;
   }
 
   h5 {
-    color: black;
+    color: $offBlack;
     text-transform: uppercase;
   }
 
   .top-nav {
-    background-color: black !important;
+    background-color: $offBlack !important;
   }
+
+  .card {
+    background-color: $cardBackground2 !important;
+  }
+
+  * {
+    border-color: $offBlack !important;
+  }
+
+  .bottom-nav {
+    border-top-color: $offBlack !important;
+  }
+
+  .nav-tabs .nav-link {
+    background-color: $tabSelected ;
+    color: gray;
+  }
+
+
+  .nav-tabs .nav-link.active {
+    background-color:$tabSelected;
+    color: $offBlack;
+    border-bottom: solid 1px $tabSelected !important;
+  }
+
+  #modal-header {
+    color: white !important;
+    background-color: $offBlack !important;
+  }
+
 
 }
 
