added loading gif

--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -352,6 +352,20 @@ body{
   text-align: center;
 }
 
+.loader{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  position: relative;
+  margin-top: 100px;
+  text-align: center;
+  font-size: 3em;
+  flex-direction: column;
+
+  // width: 100%;
+  // height: auto;
+}
 
 //regular mode
 .pg-theme-light{
