CLIENT n SERVER / remove unneeded packages from many files

--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -262,6 +262,18 @@ body {
   margin: auto;
 }
 
+#share-modal-button {
+  background-color: $yeller;
+  margin: 0px 0px 0px 15px;
+  color: black !important;
+}
+
+#share-modal-dropdown {
+  background-color: $yeller;
+  margin: 0px 0px 0px 15px;
+  color: black !important;
+}
+
 .nav-tabs .nav-link {
   color: rgb(86, 86, 86);
   font-family: "Permanent Marker", serif;
