--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -295,12 +295,26 @@ body {
 }
 
 .card-detail {
-  font-size: smaller;
+  font-size: 16px;
+  font-style: italic;
+  font-weight: 100;
+  margin-top: -5px;
+  margin-left: 0px;
+}
+
+.card-content {
+  font-weight: 500;
+  line-height: normal;
+  margin-left: 0px;
+}
+
+.ep-card-detail {
+  font-size: 16px;
   font-style: italic;
   font-weight: 100;
 }
 
-.card-content {
+.ep-card-content {
   font-weight: 500;
 }
 //HOMEPAGE
