--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -218,11 +218,19 @@ body {
 
   min-height: 100vh;
 }
-.date-picker {
-  display: flex;
+.date-picker-name {
+
   text-align: left;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 6px;
+}
+.date-picker {
+
+  text-align: center;
+  margin-left: auto;
+  margin-right: 10px;
+  margin-top: 6px;
 }
 
 // purple border for tab
