--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -1,5 +1,5 @@
 @import "~bootstrap/scss/bootstrap";
-@import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@100;200;400;500;700&family=Inter:wght@600;700&family=Shrikhand&family=Permanent+Marker&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@100;200;400;500;700&family=Permanent+Marker&display=swap");
 
 $isFree: #53ca3c;
 $isToilet: #169873;
