--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -437,7 +437,9 @@ body {
   // width: 100%;
   // height: auto;
 }
-
+ .disclaimer {
+  font-size: smaller;
+ }
 
 //regular mode
 .pg-theme-light {
