CLIENT n SERVER / add mongoDB ATLAS connection to login page

--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -206,6 +206,7 @@ $cardBackground2: #fdf9f4;
   display: block;
   margin: 0 auto;
   padding-bottom: 20px;
+  max-width: 300px;
 }
 
 .modal-body {
