--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -199,14 +199,22 @@ $cardBackground2: #fdf9f4;
 #login {
   background-color: $greeny;
   min-height: 100vh;
-  padding: 50px;
+  padding: 15px;
 }
 
 #login-img {
   display: block;
   margin: 0 auto;
-  padding-bottom: 20px;
-  max-width: 300px;
+  width: 80px;
+  height: auto;
+}
+
+.login-text {
+  font-size:medium;
+}
+
+.mail-list-form-items > * {
+  margin: 2px;
 }
 
 .modal-body {
