--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -86,6 +86,7 @@ $cardBackground2: #fdf9f4;
   margin: 4px 10px;
   border: 1px solid $secondaryColor;
   background-color: $cardBackground;
+  // max-width: 300px;
 }
 
 .card-body {
@@ -245,6 +246,12 @@ $cardBackground2: #fdf9f4;
   }
 }
 
+@include media-breakpoint-up(md){
+  .confirm-action-modal .modal-dialog {
+    width: 300px;
+  }
+}
+
 .login-carousel-item {
   display: flex;
   flex-direction: column;
@@ -273,9 +280,6 @@ $cardBackground2: #fdf9f4;
   margin: 2px;
 }
 
-
-
-
 .modal-body {
   background-color: $primaryColor;
 }
@@ -295,7 +299,7 @@ $cardBackground2: #fdf9f4;
 .confirm-action-modal .modal-dialog {
   margin: auto;
   max-height: 100vh;
-  min-width: 90vw;
+  width: 90vw;
 }
 
 h5 {
@@ -470,6 +474,9 @@ body {
   max-height: 14vh;
   width: 100%;
   margin: 3px auto;
+  background-color: $cardBackground;
+  border: 1px solid $secondaryColor;
+  padding: 15px;
 }
 
 .form-check-input:checked {
