STYLE / sort out padding for body-with-bottom-panel class

--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -78,15 +78,15 @@ $cardBackground2: #fdf9f4;
   border-radius: 0px;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   height: 9vh;
   width: 100%;
   background-color: $cardBackground;
-  border: 1px solid $secondaryColor;
+  border-top: 1px solid $secondaryColor;
   padding: 15px;
   position: fixed;
-  bottom: 11.4vh;
+  bottom: 12vh;
   z-index: 1;
   left: 0;
   right: 0;
@@ -207,12 +207,12 @@ $cardBackground2: #fdf9f4;
 
 //
 .body {
-  padding-top: 10vh;
-  padding-bottom: 15vh;
+  padding-top: 8vh;
+  padding-bottom: 12vh;
   display: flex;
   flex-direction: column;
   background-color: $primaryColor;
-  min-height: 100vh;
+  height: 100vh;
 }
 
 // USER PAGE
@@ -354,9 +354,7 @@ body {
   padding-bottom: 14vh;
   display: flex;
   flex-direction: column;
-
   background-color: $lightPinky;
-
   min-height: 100vh;
 }
 .gig-body-calendar {
@@ -383,9 +381,17 @@ body {
   background-color: $tabSelected;
 }
 
-// krewe and calendar tabs content
+// HOME PAGE
+.homePage-tabs .tab-content .tab-pane {
+  padding-top: 5px;
+  overflow: scroll;
+  height: calc(64vh - 42px);
+  padding-bottom: 5px;
+}
+
+// USER PAGE
 .userPage-tabs .tab-content .tab-pane {
-  height: 55vh;
+  height: 62vh;
   overflow: scroll;
 }
 
@@ -460,18 +466,18 @@ body {
 .ep-card-content {
   font-weight: 500;
 }
-//HOMEPAGE
 
-.body-home {
+//HOMEPAGE
+.body-with-bottom-panel {
   // padding-bottom larger on home page to account for page-bottom-panel
 
   @extend .body;
-  padding-bottom: 26vh;
+  padding-bottom: 21vh;
 }
 
 #create-post-form .btn {
   @include btn-center-icon;
-  // border-radius: 25px;
+  height: 40px;
 }
 
 .page-bottom-panel {
