--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -385,6 +385,7 @@ body {
 .homePage-tabs .tab-content .tab-pane {
   padding-top: 5px;
   overflow: scroll;
+  // tab height is 42px
   height: calc(64vh - 42px);
   padding-bottom: 5px;
 }
